--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["./**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "*.ts",
+    "services/**/*.ts",
+    "utils/**/*.ts"
+  ],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
