--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "@types/node-fetch": "^2.6.11",
     "@types/yargs": "^17.0.33",
     "shx": "^0.3.4",
-    "typescript": "^5.6.2"
+    "typescript": "5.6.2"
   }
 }
