--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "node": ">=20.17.0",
     "npm": ">=10.0.0"
   },
+  "overrides": {
+    "typescript": "5.6.2"
+  },
   "bin": {
     "square-mcp-server": "dist/index.js"
   },
@@ -17,7 +20,6 @@
   ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
-    "prepare": "npm run build",
     "watch": "tsc --watch",
     "start": "node dist/index.js start",
     "start:http": "node dist/http-server-simple.js"
